Fix issue displaying button on small mobile devices

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -317,6 +317,7 @@ p.error {
   word-break: break-word;
   overflow-y: scroll;
   width: 100%;
+  min-height: auto;
 }
 
 #termsWrapper .content table {
